--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ main {
   background-color: #A52A2A; /* Darker Blood Red */
 }
 
+.content {
+  display: none; /* Hide content by default */
+  margin-top: 1em;
+}
+
 footer {
   background-color: #333333;
   color: #FFFFFF;
